--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "coverage:browser": "npm run test:browser -- --coverage",
     "upgrade": "npm-check -u && npm audit fix",
     "bump": "bump --tag --push --all",
-    "release": "npm run upgrade && npm run clean && npm run build && npm test && npm run bump"
+    "release": "npm run clean && npm run build && npm test && npm run bump",
+    "release:full": "npm run upgrade && npm run clean && npm run build && npm test && npm run bump"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -59,14 +60,13 @@
     "@jsdevtools/version-bump-prompt": "^6.1.0",
     "@types/node": "^16.11.11",
     "chai": "^4.3.4",
-    "eslint": "^8.3.0",
+    "eslint": "^8.4.0",
     "js-yaml": "^4.1.0",
     "karma": "^6.3.9",
     "karma-cli": "^2.0.0",
     "mocha": "^9.1.3",
-    "node-fetch": "^3.1.0",
+    "node-fetch": "^2.0",
     "node-sass": "^6.0.1",
-    "npm-check": "^5.9",
     "nyc": "^15.1",
     "openapi-types": "^10.0.0",
     "shx": "^0.3.3",
